Added new command line parameter parsing/execution Moved the processing of the conversion into a separate Processor class so that it can be used from command line or via a GUI. Also changed the elapsed time format to use the timespan, to correct an issue with it showing days if the execution takes that long.

--- a/Vss2Git/Vss2Git.csproj
+++ b/Vss2Git/Vss2Git.csproj
@@ -66,10 +66,14 @@
     <Compile Include="AsyncLineReader.cs" />
     <Compile Include="CollectionUtil.cs" />
     <Compile Include="ChangesetBuilder.cs" />
+    <Compile Include="CommandLineParameter.cs" />
+    <Compile Include="CommandLineParser.cs" />
     <Compile Include="ProcessException.cs" />
     <Compile Include="ExceptionFormatter.cs">
     </Compile>
     <Compile Include="PathMatcher.cs" />
+    <Compile Include="Processor.cs" />
+    <Compile Include="ProcessParameters.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
